<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trending"
            android:icon="@drawable/trending"
            android:title="@string/nav_trending"/>
        <item
            android:id="@+id/nav_untag"
            android:icon="@drawable/stars"
            android:title="@string/nav_untag"/>
        <item
            android:id="@+id/nav_tag"
            android:icon="@drawable/tag"
            android:title="@string/nav_tag"/>

        <item
            android:id="@+id/nav_me"
            android:icon="@drawable/me"
            android:title="@string/nav_me"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/nav_about"/>
        <item
            android:id="@+id/nav_developer"
            android:icon="@drawable/developer"
            android:title="@string/nav_developer"/>
    </group>

</menu>
