<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (c) 2016 [liuwuping1206@163.com | liuwuping1206@gmail.com]
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License”);
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_tags"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <!--添加tag-->
    <io.codetail.widget.RevealFrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/view_addtag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dp16"
            android:visibility="invisible">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_addtag_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/MyTextInputHint">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addtag_name_hint"
                    android:theme="@style/MyEditText"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp10"/>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_addtag_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/MyTextInputHint">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:gravity="left|top"
                    android:hint="@string/addtag_desc_hint"
                    android:inputType="textMultiLine"
                    android:theme="@style/MyEditText"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp10"/>

            <Button
                android:id="@+id/btn_addtag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addtag_save"/>

        </LinearLayout>


    </io.codetail.widget.RevealFrameLayout>


</RelativeLayout>